@@ -5,6 +5,8 @@
 * NEW: Allow release type constants to be passed to include and filter objects.
 * NEW: Methods Utils.add_namespace and Utils.remove_namespace.
 * NEW: Methods Release#earliest_release_event and Release#earliest_release_date
+* NEW: Entity#get_relations allows string with or without namespace for
+  target_type, relation_type and required_attributes
 
 == 0.2.1 (2007-07-24)
 * Erroneous date strings in the XML are ignored. No error is raised and nil
